Correcting align when clicking on first link

--- a/web/app/assets/stylesheets/_common.less
+++ b/web/app/assets/stylesheets/_common.less
@@ -5,6 +5,7 @@
 @top-banner-navbar-offset: 40px;
 @top-banner-header-offset: @top-banner-navbar-offset;
 @top-banner-content-top-offset: @top-banner-navbar-offset / 2;
+@top-banner-watch-collection-offset: @top-banner-navbar-offset;
 
 @transparency-for-header-and-carousel: 0.55;
 
