--- a/web/app/assets/stylesheets/_watch_collection.less
+++ b/web/app/assets/stylesheets/_watch_collection.less
@@ -42,11 +42,11 @@
 
 @media (min-width: @bootstrap-screen-md-min) {
     #collection {
-        margin-top: -200px;
+        margin-top: -200px - @top-banner-watch-collection-offset;
     }
     
     #collection .row:first-child {
-        padding-top: 200px;
+        padding-top: 200px + @top-banner-watch-collection-offset;
     }
 }
 
